--- a/solar-control/rootfs/usr/bin/templates/base.html
+++ b/solar-control/rootfs/usr/bin/templates/base.html
@@ -4,15 +4,75 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Solar Optimiser{% endblock %}</title>
+    <style>
+        html {
+            height: 100%;
+        }
+        body {
+            height: 100%;
+            margin: 0;
+            font-family: Roboto, sans-serif;
+            -moz-osx-font-smoothing: grayscale;
+            -webkit-font-smoothing: antialiased;
+            font-size: 1rem;
+            line-height: 1.375rem;
+            font-weight: 500;
+            letter-spacing: 0.0071428571em;
+            text-decoration: inherit;
+            text-transform: inherit;
+            color: #212121;
+            font-weight: 400;
+            line-height: 2;
+            background: #fafafa;
+        }
+        a {
+            text-decoration: none;
+            color: #03a9f4;
+        }
+        .toolbar {
+            display: flex;
+            align-items: center;
+            font-size: 20px;
+            height: 65px;
+            background-color: #03a9f4;
+            font-weight: 400;
+            color: #fff;
+            box-sizing: border-box;
+            padding: 0px 16px;
+        }
+        .flex {
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+        }
+        .content {
+            display: flex;
+            flex-direction: column;
+            flex-grow: 1;
+            align-items: center;
+            justify-content: center;
+            padding: 16px;
+        }
+        h1 {
+            font-family: Roboto, sans-serif;
+            -moz-osx-font-smoothing: grayscale;
+            -webkit-font-smoothing: antialiased;
+            font-size: 20px;
+            font-weight: 400;
+            letter-spacing: 0;
+            margin: 0 0 0 72px;
+        }
+    </style>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/searchable-select.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/sensor-cards.css') }}">
     {% block extra_head %}{% endblock %}
 </head>
 <body>
-    <div class="card">
-        <a href="/" class="back-link">← Back to Main</a>
-        <h1>{% block heading %}Solar Optimiser{% endblock %}</h1>
+    <div class="flex">
+        <div class="toolbar">
+            <h1>{% block heading %}Solar Optimiser{% endblock %}</h1>
+        </div>
         <div class="content">
             {% block content %}{% endblock %}
         </div>
