--- a/solar-control/rootfs/usr/bin/templates/base.html
+++ b/solar-control/rootfs/usr/bin/templates/base.html
@@ -63,9 +63,9 @@
             margin: 0 0 0 72px;
         }
     </style>
-    <link rel="stylesheet" href="{{ ingress_path }}{{ url_for('static', filename='css/style.css') }}">
-    <link rel="stylesheet" href="{{ ingress_path }}{{ url_for('static', filename='css/searchable-select.css') }}">
-    <link rel="stylesheet" href="{{ ingress_path }}{{ url_for('static', filename='css/sensor-cards.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/searchable-select.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/sensor-cards.css') }}">
     {% block extra_head %}{% endblock %}
 </head>
 <body>
@@ -77,7 +77,7 @@
             {% block content %}{% endblock %}
         </div>
     </div>
-    <script src="{{ ingress_path }}{{ url_for('static', filename='js/searchable-select.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/searchable-select.js') }}"></script>
     {% block extra_scripts %}{% endblock %}
     <script>
         // Add ingress path to all relative links
