--- a/solar-control/rootfs/usr/bin/templates/configure_grid.html
+++ b/solar-control/rootfs/usr/bin/templates/configure_grid.html
@@ -163,5 +163,14 @@
 
         // Update values when the page loads
         document.addEventListener('DOMContentLoaded', updateDisplayedValues);
+
+        // Initialize searchable selects
+        document.addEventListener('DOMContentLoaded', function() {
+            new SearchableSelect('solar_generation_input', 'solar_generation_options', 'solar_generation');
+            new SearchableSelect('grid_power_input', 'grid_power_options', 'grid_power');
+            new SearchableSelect('solar_forecast_input', 'solar_forecast_options', 'solar_forecast');
+            new SearchableSelect('grid_voltage_input', 'grid_voltage_options', 'grid_voltage');
+            new SearchableSelect('tariff_rate_input', 'tariff_rate_options', 'tariff_rate');
+        });
     </script>
 {% endblock %} 
