--- a/solar-control/rootfs/usr/bin/templates/index.html
+++ b/solar-control/rootfs/usr/bin/templates/index.html
@@ -10,7 +10,7 @@
         <a href="{{ url_for('configure_grid') }}" class="button">Configure Grid</a>
         <a href="{{ url_for('configure_battery') }}" class="button">Configure Battery</a>
         <a href="{{ url_for('configure_devices') }}" class="button">Configure Devices</a>
-        <a href="{{ url_for('debug') }}" class="button">Debug Interface</a>
+        <a href="{{ url_for('static_page', page='debug') }}" class="button">Debug Interface</a>
     </div>
     
     <div class="card" id="sensor-values">
