tried to fix the devices page

--- a/solar-control/rootfs/usr/bin/templates/configure_devices.html
+++ b/solar-control/rootfs/usr/bin/templates/configure_devices.html
@@ -6,6 +6,12 @@
 {% block heading %}Configure Devices{% endblock %}
 
 {% block content %}
+    <!-- Debug information -->
+    <div style="display: none;">
+        <p>Number of entities: {{ entities|length }}</p>
+        <p>First entity (if any): {{ entities[0] if entities else 'No entities' }}</p>
+    </div>
+
     <div class="nav-menu">
         <a href="{{ url_for('index') }}" class="button">Back to Dashboard</a>
     </div>
@@ -24,13 +30,17 @@
                     <input type="text" id="switch_entity_input" placeholder="Search for a switch entity..." autocomplete="off">
                     <input type="hidden" name="switch_entity" id="switch_entity" required>
                     <div class="options" id="switch_entity_options">
-                        {% for entity in entities %}
-                            {% if entity.entity_id.startswith('switch.') or entity.entity_id.startswith('input_boolean.') %}
-                            <div class="option" data-value="{{ entity.entity_id }}">
-                                {{ entity.attributes.friendly_name }} ({{ entity.entity_id }})
-                            </div>
-                            {% endif %}
-                        {% endfor %}
+                        {% if entities %}
+                            {% for entity in entities %}
+                                {% if entity and entity.entity_id and (entity.entity_id.startswith('switch.') or entity.entity_id.startswith('input_boolean.')) %}
+                                <div class="option" data-value="{{ entity.entity_id }}">
+                                    {{ entity.attributes.friendly_name if entity.attributes and entity.attributes.friendly_name else entity.entity_id }} ({{ entity.entity_id }})
+                                </div>
+                                {% endif %}
+                            {% endfor %}
+                        {% else %}
+                            <div class="option">No entities available</div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
